--- a/package.json
+++ b/package.json
@@ -19,58 +19,22 @@
     "url": "https://github.com/jiayingy/vue-single-date-picker"
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "production": "yarn build --target lib --name vue-single-date-picker ./src/CalendarView.vue",
-    "demo": "yarn build ./src/demo.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview --port 4173",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
-    "node-sass": "^4.13.0",
-    "serialize-javascript": "^2.1.2",
-    "vue": "^2.6.10"
+    "sass": "^1.55.0",
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass-loader": "^8.0.0",
-    "style-resources-loader": "^1.2.1",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/recommended",
-      "eslint:recommended"
-    ],
-    "rules": {
-      "vue/no-unused-components": "warn",
-      "no-unused-vars": "warn",
-      "quotes": [
-        "error",
-        "single"
-      ]
-    },
-    "parser": "vue-eslint-parser",
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "prettier": "^2.7.1",
+    "vite": "^3.1.0"
+  }
 }
