--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-single-date-picker",
+  "name": "vue3-single-date-picker",
   "version": "0.5.12",
   "main": "./dist/lib.mjs",
   "module": "./dist/lib.mjs",
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jiayingy/vue-single-date-picker"
+    "url": "https://github.com/milesq/vue-single-date-picker"
   },
   "scripts": {
     "dev": "vite",
