--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@iconify-json/mdi": "^1.1.34",
     "unplugin-icons": "^0.14.11",
     "vue": "^3.2.37"
   },
